# gipuma

./: CMakeLists.txt  cameraGeometryUtils.h  fileIoUtils.h  files.h  gipuma.cu  gipuma.h  globalstate.h  helper_cuda.h  main.cpp  main.h  managed.h  mathUtils.h
cmake/: GipumaConfig.cmake.in
